2006-11-22    <hesa@gnu.org>

	* doc/xnee.texi
	Fixed bad nodes

2006-11-22    <hesa@gnu.org>

	* libxnee/src/xnee_fileop.c: 
	* libxnee/include/libxnee/xnee_fileop.h:
	Added function, xnee_open_err_file, to open verbose file
	
	* doc/xnee_intro.texi:
	* doc/xnee_faq.texi:
	Added notes on gnee, pnee
	
	* doc/xnee.texi:
	Added chapter on Xnee programs
	
2006-11-21    <hesa@localhost.localdomain>

	* pnee/src/pnee_impl.c 
	* pnee/src/pnee_impl.h: 
	* pnee/src/pnee_types.h: 
	Added code to handle reset on multiple stop presses

2006-11-21    <hesa@gnu.org>

	* pnee/src/pnee_impl.[hc]
	Various fixes to make recording work again
	
	* libxnee/src/xnee.c
	Checking for XNEE_OK_LEAVE in loop
	
	* libxnee/src/xnee_record.c
	Making sure ret is set to XNEE_OK
	
2006-11-20    <hesa@gnu.org>

	* doc/xnee_general.texi
	Note on stoping with Control-c added

	* src/xnee_utils.c
	* src/xnee_replay.c
	Parser error fixed

	* libxnee/src/print.c (xnee_store_mouse_pos): 
	Fixed fprintf arguments in wrong order 

        *libxnee/include/libxnee/datastrings.h
        *libxnee/include/libxnee/xnee.h
        *libxnee/include/libxnee/xnee_range.h
        *libxnee/include/libxnee/xnee_record.h
        *libxnee/include/libxnee/xnee_resource.h
        *libxnee/src/datastrings.c
        *libxnee/src/xnee.c
        *libxnee/src/xnee_range.c
        *libxnee/src/xnee_resource.c
	Added define NEED_REPLIES NEED_EVENTS before inclusion of Xproto.h

2006-11-19   Henrik Sandkklef  <hesa@gnu.org>

	* src/xnee_setget.c
	* src/xnee.c
	* include/libxnee/xnee_setget.h
	* include/libxnee/xnee.h
	* include/libxnee/xnee_internal.h
	Added code for syntax check

	* src/xnee_utils.c
	* src/xnee_resource.c
	* src/xnee_replay.c
	* src/xnee_range.c
	* src/xnee_expr.c
	Corrected fault when parsing files

	* src/xnee_error.c
	Corrected fault when parsing files

	* src/print.c
	Commented away things in recorded file that may break replay

	* include/libxnee/xnee_resource.h
	Corrected fault when parsing files
