@@ -1,6 +1,6 @@
-AC_INIT(Xnee,2.05.95.96,bug-xnee@gnu.org)
+AC_INIT(Xnee,2.05.95.97,bug-xnee@gnu.org)
 AC_CONFIG_AUX_DIR(./autotools/)
-AM_INIT_AUTOMAKE(Xnee,2.05.96)
+AM_INIT_AUTOMAKE(Xnee,2.05.97)
 
 
 AC_PROG_INSTALL
